Bug 77533 - Async DMA broken on OLAND
Summary: Async DMA broken on OLAND
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
: 77602 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-04-16 16:12 UTC by Sgt. Garcia
Modified: 2014-04-18 17:25 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
screenshot (221.06 KB, image/png)
2014-04-16 16:12 UTC, Sgt. Garcia
Details
Xorg.log (33.01 KB, text/plain)
2014-04-17 16:27 UTC, Sgt. Garcia
Details
dmesg.log (80.59 KB, text/plain)
2014-04-18 16:13 UTC, Sgt. Garcia
Details
possible fix (4.56 KB, patch)
2014-04-18 17:05 UTC, Alex Deucher
Details | Splinter Review

Description Sgt. Garcia 2014-04-16 16:12:45 UTC
Created attachment 97478 [details]
screenshot

please see the attached files. that's what i get building mesa after

commit: acf55e73252e46fa51378ef4b23c94a89902ae1c

so that^ is the last working commit of here (OLAND).
Comment 1 Michel Dänzer 2014-04-17 00:22:10 UTC
Please attach the corresponding Xorg.0.log and output of glxinfo.

It's hard to believe that commit causing the problem; it shouldn't make any functional difference.
Comment 2 Sgt. Garcia 2014-04-17 16:27:47 UTC
Created attachment 97523 [details]
Xorg.log
Comment 3 Sgt. Garcia 2014-04-17 16:29:09 UTC
(In reply to comment #1)
> Please attach the corresponding Xorg.0.log and output of glxinfo.
> 
> It's hard to believe that commit causing the problem; it shouldn't make any
> functional difference.

true. that's the "last working" commit. a commit after that breaks things. ok, i'm gonna try with the very next commit.
Comment 4 Sgt. Garcia 2014-04-17 16:34:57 UTC
(In reply to comment #3)
> (In reply to comment #1)
> > Please attach the corresponding Xorg.0.log and output of glxinfo.
> > 
> > It's hard to believe that commit causing the problem; it shouldn't make any
> > functional difference.
> 
> true. that's the "last working" commit. a commit after that breaks things.
> ok, i'm gonna try with the very next commit.

title was wrong. so this is the bad commit:

71254732db12c8813c002425b5c1b7c31bf56f65
Comment 5 Marek Olšák 2014-04-18 12:15:11 UTC
I cannot reproduce this on Cape Verde.
Comment 6 Marek Olšák 2014-04-18 12:15:48 UTC
Please attach your dmesg.
Comment 7 Axel Davy 2014-04-18 15:12:56 UTC
*** Bug 77602 has been marked as a duplicate of this bug. ***
Comment 8 Axel Davy 2014-04-18 15:21:37 UTC
I had the same issue (bug 77602), and disabling forcing si_dma_copy to always go to the fallback solves the tiling issues and the glitches.

I have a CAPE VERDE card (hd7730m).
Comment 9 Alex Deucher 2014-04-18 15:26:32 UTC
We may need a similar fix for async dma as we did for displays.  See bug 71488.
Comment 10 Alex Deucher 2014-04-18 15:34:50 UTC
The async dma code is probably setting the band size incorrectly on these asics.
Comment 11 Alex Deucher 2014-04-18 15:34:59 UTC
*bank size
Comment 12 Axel Davy 2014-04-18 15:37:51 UTC
I have tested to force to go to the fallback only before calling si_dma_copy_tile,
to test if si_dma_copy_buffer was working.

I didn't notice any glitch or tiling problem with heaven, but I don't know if si_dma_copy_buffer is actually used or not.
Comment 13 Sgt. Garcia 2014-04-18 16:13:32 UTC
Created attachment 97565 [details]
dmesg.log
Comment 14 Alex Deucher 2014-04-18 17:05:34 UTC
Created attachment 97566 [details] [review]
possible fix

Does the attached patch fix the issue?
Comment 15 Axel Davy 2014-04-18 17:17:04 UTC
I have tested to return V_009910_ADDR_SURF_16_BANK
in case 8 in si_num_banks, instead of V_009910_ADDR_SURF_8_BANK,
and unigine have no glitches anymore.

I test your patch right away.
Comment 16 Axel Davy 2014-04-18 17:20:01 UTC
Your patch works for me.
Comment 17 Sgt. Garcia 2014-04-18 17:21:18 UTC
(In reply to comment #14)
> Created attachment 97566 [details] [review] [review]
> possible fix
> 
> Does the attached patch fix the issue?

yep, thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.